--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "@shared/Header.astro";
+import Footer from "@shared/Footer.astro";
 
 export interface Props {
   title: string;
@@ -45,7 +46,7 @@ const pageTitle = title + preferences.general.browser_window_title_suffix;
     {show_global_header && <Header {id} {paths} {currentPath} />}
     <article>
       <slot />
-      {show_global_footer && <section id="footer">Footer!</section>}
+      {show_global_footer && <Footer />}
     </article>
   </body>
 </html>
