Update menu style

--- a/components/social/social.astro
+++ b/components/social/social.astro
@@ -25,13 +25,21 @@ import preferences from "../../../data/preferences.json";
 
 <style lang="scss">
   .social {
+    color: inherit;
     display: flex;
+    justify-content: flex-end;
+    padding-right: var(--text-gap);
     align-items: center;
     list-style-type: none;
     column-gap: var(--text-gap);
   }
 
+  li {
+    color: inherit;
+  }
+
   a {
+    color: inherit;
     display: flex;
     align-items: center;
     gap: 5px;
