--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -24,7 +24,9 @@
   --text-color: var(--color-primary);
   --heading-color: var(--color-primary);
   --header-background-color: 0 0 0 / 0.6;
+  --header-background-color-bottom: 0 0 0 / 0;
   --header-color: 255 255 255;
+  --header-height: 72px;
 }
 
 * {
