Add slider overlay div

--- a/components/layout/slider/slider.astro
+++ b/components/layout/slider/slider.astro
@@ -132,6 +132,7 @@ const dataGlideOptions = Object.entries(glideOptions).reduce(
             ))
           }
         </ul>
+        <div class="glide__overlay"></div>
       </div>
       {
         showArrows && (
