--- a/shared/astro/Header.astro
+++ b/shared/astro/Header.astro
@@ -33,6 +33,7 @@ const { id, currentPath, paths } = Astro.props;
     color: rgb(var(--header-color));
     display: grid;
     grid-template-areas: "logo navigation social";
+    grid-template-rows: 100%;
     z-index: 9999;
     height: var(--header-height);
     background: linear-gradient(
@@ -47,9 +48,17 @@ const { id, currentPath, paths } = Astro.props;
     left: 0;
     right: 0;
     top: 0;
+    bottom: calc(100% - var(--header-height));
   }
 
   .logo {
     padding: 10px;
+  }
+
+  .logo img {
+    object-fit: contain;
+    object-position: left;
+    width: 100%;
+    height: 100%;
   }
 </style>
