--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -235,9 +235,12 @@ $bulletSize: 1rem;
 .glide__slide {
   background-color: var(--background-color);
   background-image: var(--background-image);
+  background-size: var(--background-fit);
 
   background-position: center;
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: 80%;
+  // background-size: cover;
 
   padding: 4rem;
   height: 100%;
@@ -259,6 +262,10 @@ $bulletSize: 1rem;
     background-color: #00000033;
     border-radius: $arrowSize;
     backdrop-filter: blur(2px);
+  }
+
+  .glide__arrow:hover {
+    background-color: #00000044;
   }
 
   .glide__arrow--left {
@@ -293,18 +300,22 @@ $bulletSize: 1rem;
 
 .glide__bullet {
   border: none;
-  padding: 0;
+  padding: 5px;
   height: $bulletSize * 0.5;
   width: $bulletSize;
   border-radius: 0.5rem;
-  background-color: #dddddd;
+  background-color: #bbbbbb44;
   box-shadow: 0 0 0.2rem #00000011;
   transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 
   &--active {
-    background-color: white;
+    background-color: #ffffffaa;
     box-shadow: 0 0 0.2rem #00000044;
   }
+}
+
+.glide__bullet:hover {
+  box-shadow: 0 0 0.2rem #00000088;
 }
 
 .slider div[data-slider-type="fader"] {
