--- a/styles/editor.css
+++ b/styles/editor.css
@@ -15,3 +15,15 @@ h3.highlight-2 {
   padding: 3px 10px;
   margin: 0 0 5px 0;
 }
+
+.rich-text > * {
+  width: 100%;
+}
+
+.rich-text img {
+  max-width: 100%;
+}
+
+.align-center + table {
+  align-self: center;
+}
