--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -48,18 +48,26 @@ section
   margin-top: var(--text-gap);
 }
 
-section:not(.no-indent) {
+section {
   margin: var(--indent);
 }
 
-// .columns {
-//   margin-top: var(--indent);
-//   // margin-bottom: var(--indent);
-// }
+section.no-indent {
+  margin: 0;
 
-// * + .columns section {
-//   margin-top: 0;
-// }
+  &-top {
+    margin-top: 0;
+  }
+  &-bottom {
+    margin-bottom: 0;
+  }
+  &-left {
+    margin-left: 0;
+  }
+  &-right {
+    margin-right: 0;
+  }
+}
 
 .columns section:not(.no-indent) {
   margin-left: 0;
