Social use --text-color instead of currentColor

--- a/components/social/social.astro
+++ b/components/social/social.astro
@@ -25,21 +25,20 @@ import preferences from "../../../data/preferences.json";
 
 <style lang="scss">
   .social {
-    color: inherit;
+    color: var(--text-color);
     display: flex;
     justify-content: flex-end;
+    // height: 100%;
+    padding: 1rem;
+    margin-top: 0;
     padding-right: var(--text-gap);
     align-items: center;
     list-style-type: none;
     column-gap: var(--text-gap);
   }
 
-  li {
-    color: inherit;
-  }
-
   a {
-    color: inherit;
+    color: var(--text-color);
     display: flex;
     align-items: center;
     gap: 5px;
