--- a/components/map/map.astro
+++ b/components/map/map.astro
@@ -17,7 +17,10 @@ const height = Astro.props.height + "vh";
 const mapId = "map-" + key;
 ---
 
-<section class:list={["map", { "no-indent": !indent }]}>
+<section
+  class:list={["map", { "no-indent": !indent }]}
+  style=`--height: ${height};`
+>
   <div
     id={mapId}
     class="map-box"
@@ -65,5 +68,9 @@ const mapId = "map-" + key;
 <style>
   .map-box {
     min-height: 100%;
+  }
+
+  section {
+    min-height: var(--height);
   }
 </style>
