--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -71,18 +71,18 @@ section.no-indent {
 
 @media only screen and (min-width: 768px) {
   .columns section:not(.no-indent) {
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: calc(var(--column-gap) * 0.5);
+    padding-right: calc(var(--column-gap) * 0.5);
     // padding-top: 0;
     // padding: 0;
 
     &:first-child {
       padding-left: var(--indent);
-      padding-right: var(--column-gap);
+      // padding-right: var(--column-gap);
     }
 
     &:last-child {
-      padding-left: var(--column-gap);
+      // padding-left: var(--column-gap);
       padding-right: var(--indent);
     }
   }
