Cap number of columns

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -70,7 +70,7 @@ section.no-indent.no-indent {
 }
 
 .columns > section {
-  padding: calc(var(--column-gap) * 0.5);
+  padding: calc(var(--column-gap));
 }
 
 .columns > {
